--- a/html/frame2.html
+++ b/html/frame2.html
@@ -65,7 +65,7 @@
                     <li class="aui-list-item aui-list-item-middle" onclick="fnOpenList5()">
                         <div class="aui-media-list-item-inner">
                             <div class="aui-list-item-media" style="width: 2.5rem;">
-                                <img src="../image/Myspace.png" class="" style="width:32px;height:32px;">
+                                <img src="../image/MySpace.png" class="" style="width:32px;height:32px;">
                             </div>
                             <div class="aui-list-item-inner aui-list-item-arrow">
                                 租房服务
