--- a/html/user/myorder_frame2.html
+++ b/html/user/myorder_frame2.html
@@ -7,7 +7,7 @@
     <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
     <title>我的订单Frame</title>
     <link rel="stylesheet" type="text/css" href="../../css/api.css" />
-    <link rel="stylesheet" type="text/css" href="../../css/aui.css" />
+      <link rel="stylesheet" type="text/css" href="../../css/aui.css" />
     <style>
     html {
         height: 100%;
@@ -24,12 +24,9 @@
         width: 100%;
         height: auto;
     }
-
-
     .highlight {
         opacity: 0.7;
     }
-  
     .dpName{
       background: url(../../image/dipu.png) no-repeat 0 center;
       background-size: 25px 25px;
@@ -45,7 +42,6 @@
           background-image: -webkit-none;
       }
     }
-
     </style>
 </head>
 
@@ -55,7 +51,7 @@
           <div class="aui-card-list-header aui-card-list-user">
               <div class="aui-card-list-user-name">
                   <div class="aui-font-size-16 dpName">陕十三肉夹馍</div>
-                  <small style="color:#ec3213">已完成</small>
+                  <small style="color:#ec3213">已付款</small>
               </div>
           </div>
           <div class="aui-card-list-content aui-border-t">
@@ -87,12 +83,11 @@
           <div class="aui-card-list-footer aui-border-t">
               <div></div>
               <div>
-                  <div class="aui-btn aui-btn aui-btn-outlined aui-btn-info aui-margin-r-10" style="color:#2d2d2d !important;border:1px solid #999">删除订单</div>
-                  <div class="aui-btn aui-btn aui-btn-outlined aui-btn-warning" style="color:#fe467a !important;border:1px solid #fe467a">再次购买</div>
+                  <div class="aui-btn aui-btn aui-btn-outlined aui-btn-info aui-margin-r-10" style="color:#2d2d2d !important;border:1px solid #999">取消订单</div>
+                  <div class="aui-btn aui-btn aui-btn-outlined aui-btn-warning" style="color:#fe467a !important;border:1px solid #fe467a">提醒发货</div>
               </div>
           </div>
       </div>
-
   </section>
 </body>
 <script type="text/javascript" src="../../script/api.js"></script>
