--- a/html/Fabu/DzRelease_frm.html
+++ b/html/Fabu/DzRelease_frm.html
@@ -1,10 +1,10 @@
-<!DOCTYPE HTML>
+w<!DOCTYPE HTML>
 <html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
     <meta name="format-detection" content="telephone=no,email=no,date=no,aItemress=no">
-    <title>短租发布 从  </title>
+    <title>短租发布</title>
     <link rel="stylesheet" type="text/css" href="../../css/aui.css" />
     <style media="screen">
        .aui-list-item-label{
@@ -33,7 +33,7 @@
         }
       .aui-radio:checked{
         background-color: #fe467a;
-    border: solid 1px #fe467a;
+        border: solid 1px #fe467a;
       }
       textarea {
           height: 8rem;
