--- a/html/user/setting_frm.html
+++ b/html/user/setting_frm.html
@@ -37,6 +37,11 @@
                     消息管理
                 </div>
             </li>
+            <li class="aui-list-item" onclick="fnopenInfo()">
+                <div class="aui-list-item-inner aui-list-item-arrow">
+                    地址管理
+                </div>
+            </li>
             <li class="aui-list-item">
                 <div class="aui-list-item-inner aui-list-item-arrow">
                     问题反馈
