--- a/html/LjBuy_win.html
+++ b/html/LjBuy_win.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" type="text/css" href="../css/aui.css" />
 </head>
 <body>
-  <header class="aui-bar aui-bar-nav" id="aui-header">
-      <a class="aui-btn aui-pull-left" tapmode onclick="openWin()">
-          <span class="aui-iconfont aui-icon-home"></span>
-      </a>
-      <div class="aui-title">个人中心</div>
-  </header>
+    <header class="aui-bar aui-bar-nav" id="aui-header">
+        <a class="aui-btn aui-pull-left" tapmode onclick="closeWin()">
+            <span class="aui-iconfont aui-icon-left"></span>
+        </a>
+        <div class="aui-title">立即购买</div>
+    </header>
 </body>
-<script type="text/javascript" src="../script/api.js"></script>
+<script src="../script/api.js"></script>
 <script type="text/javascript">
     apiready = function(){
         api.parseTapmode();
@@ -22,33 +22,26 @@
         $api.fixStatusBar(header);
         var headerPos = $api.offset(header);
         var body_h = $api.offset($api.dom('body')).h;
-        // var footerH = $api.offset($api.byId('footer')).h;
         api.openFrame({
-            name: 'frame4',
-            url: 'frame4.html',
-            bounces: false,
+            name: 'LjBuy1_frm',
+            url: 'LjBuy1_frm.html',
+            bounces: true,
             rect: {
                 x: 0,
                 y: headerPos.h,
                 w: 'auto',
-                h: api.winHeight-headerPos.h
+                h: 'auto'
             },
             progress: {
-              type:'default',
-              title:'加载中.....',
-              text:'先喝会儿茶~~~'
-            },
+                type:'default',
+                title:'加载中.....',
+                text:'先喝会儿茶~~~'
+              },
         })
     };
-    function openWin(){
-        api.openWin({
-            name: 'index',
-            url: '../index.html',
-            pageParam: {
-                name: 'test'
-            }
+    function closeWin(){
+        api.closeWin({
         });
-
     }
 </script>
 </html>
