--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 apiready = function () {
     $api.fixStatusBar( $api.dom('header') );
     api.setStatusBarStyle({
-        style: 'dark',
+        style: 'light',
         color: '#fe467a'
     });
     funIniGroup();
